// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button demo -- button 1`] = `
.c22 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 22px;
  padding: 0 8px;
  color: #fff;
  background: #4683e6;
  border-color: #4683e6;
}

.c22:hover {
  color: #fff;
  background: #3664c8;
  border-color: #3664c8;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c8 .c9 {
  color: #4074e1;
}

.c11 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c6 .c23 {
  margin-right: -1px;
}

.c6 .c23:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .c23:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c19 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c18 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c12 .c20 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c12 .c13 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        styleType
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed "
              type="cbox-ed"
            />
            primary
          </div>
          <div
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            border
          </div>
          <div
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            border-gray
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed "
              type="cbox-ed"
            />
            sm
          </div>
          <div
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            md
          </div>
          <div
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        shape
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed "
              type="cbox-ed"
            />
            undefined
          </div>
          <div
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            circle
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        icon
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed "
              type="cbox-ed"
            />
            circle-fill
          </div>
          <div
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            circle
          </div>
          <div
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            loading
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        loading
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <button
    class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-primary c22"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__circle-fill "
      type="circle-fill"
    />
    Button
  </button>
</div>
`;

exports[`Button demo -- disabled 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c1:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

.c1:disabled,
.c1[disabled] {
  border-color: #d9d9d9;
  background: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-button-disabled c1"
    disabled=""
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button demo -- icon 1`] = `
.c1.c1.c1 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__loading "
      type="loading"
    />
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__link "
      type="link"
    />
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__check "
      type="check"
    />
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    <i
      class="uc-fe-icon icon__loading uc-fe-icon-spin c1"
      type="loading"
    />
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    <i
      class="uc-fe-icon icon__link uc-fe-icon-spin c1"
      type="link"
    />
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    <i
      class="uc-fe-icon icon__check uc-fe-icon-spin c1"
      type="check"
    />
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    Button 
    <i
      class="uc-fe-icon icon__loading uc-fe-icon-spin c1"
      type="loading"
    />
     Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    Button 
    <i
      class="uc-fe-icon icon__link uc-fe-icon-spin c1"
      type="link"
    />
     Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    Button 
    <i
      class="uc-fe-icon icon__check uc-fe-icon-spin c1"
      type="check"
    />
     Button
  </button>
</div>
`;

exports[`Button demo -- loading 1`] = `
.c1.c1.c1 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
  position: relative;
  pointer-events: none;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

.c0:before {
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  right: -1px;
  background: white;
  opacity: 0.35;
  content: '';
  border-radius: inherit;
  z-index: 1;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
  pointer-events: none;
}

.c2 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #fff;
  background: #4683e6;
  border-color: #4683e6;
  position: relative;
  pointer-events: none;
}

.c2:hover {
  color: #fff;
  background: #3664c8;
  border-color: #3664c8;
}

.c2:before {
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  right: -1px;
  background: white;
  opacity: 0.35;
  content: '';
  border-radius: inherit;
  z-index: 1;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
  pointer-events: none;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-button-loading c0"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__loading uc-fe-icon-spin c1"
      type="loading"
    />
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-button-loading c0"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__loading uc-fe-icon-spin c1"
      type="loading"
    />
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary uc-fe-button-loading c2"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__loading uc-fe-icon-spin c1"
      type="loading"
    />
  </button>
</div>
`;

exports[`Button demo -- shape 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 34px;
  padding: 0 12px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
  border-radius: 50% !important;
  padding: 0;
  overflow: hidden;
  width: 34px;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 34px;
  padding: 0 12px;
  color: #fff;
  background: #4683e6;
  border-color: #4683e6;
  border-radius: 50% !important;
  padding: 0;
  overflow: hidden;
  width: 34px;
}

.c1:hover {
  color: #fff;
  background: #3664c8;
  border-color: #3664c8;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border uc-fe-button-circle c0"
    shape="circle"
    type="button"
  >
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-primary uc-fe-button-circle c1"
    shape="circle"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__upload "
      type="upload"
    />
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border uc-fe-button-circle c0"
    shape="circle"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__plus "
      type="plus"
    />
  </button>
</div>
`;

exports[`Button demo -- size 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c1:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 22px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

.c2 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 34px;
  padding: 0 12px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c2:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border c0"
    type="button"
  >
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c1"
    type="button"
  >
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border c2"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button demo -- styleType 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c1:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #fff;
  background: #4683e6;
  border-color: #4683e6;
}

.c0:hover {
  color: #fff;
  background: #3664c8;
  border-color: #3664c8;
}

.c2 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #f2f6fc;
  border-color: #c3cad9;
}

.c2:hover {
  color: #4683e6;
  background: #f2f6fc;
  border-color: #4683e6;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c0"
    type="button"
  >
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c1"
    type="button"
  >
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c2"
    type="button"
  >
    Button
  </button>
</div>
`;
